--- a/argocd.yml
+++ b/argocd.yml
@@ -22853,3 +22853,26 @@ spec:
       app.kubernetes.io/name: argocd-server
   policyTypes:
   - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd
+  namespace: argocd
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: argocd.rdevopsb73.online
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: argocd.rdevopsb73.online
+      http:
+        paths:
+          - pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 443
+            path: /
+
+
