--- a/prometheus-dev.yml
+++ b/prometheus-dev.yml
@@ -3,4 +3,4 @@ grafana:
     enabled: true
     ingressClassName: nginx
     hosts:
-      - grafana.rdevopsb73.online
+      - grafana-dev.rdevopsb73.online
